Fixed: authors card, nav style and masonry alignment issue (#540)

--- a/assets/css/public-main.css
+++ b/assets/css/public-main.css
@@ -9332,6 +9332,12 @@ p.atbd-min {
   position: relative;
 }
 
+.directorist-content-active .directorist-authors__cards {
+  margin-top: -30px;
+}
+.directorist-content-active .directorist-authors__cards .directorist-row > * {
+  margin-top: 30px;
+}
 .directorist-content-active .directorist-authors__nav {
   margin-bottom: 30px;
 }
@@ -9365,7 +9371,7 @@ p.atbd-min {
   border-bottom: 2px solid transparent;
   font-size: 15px;
   font-weight: 500;
-  text-transform: uppercase;
+  text-transform: capitalize;
   -webkit-box-shadow: none;
           box-shadow: none;
   text-decoration: none;
@@ -9386,10 +9392,20 @@ p.atbd-min {
 }
 .directorist-content-active .directorist-authors__card__img {
   margin-bottom: 15px;
+  text-align: center;
 }
 .directorist-content-active .directorist-authors__card__img img {
-  border-radius: 10px;
-  width: 100%;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.directorist-content-active .directorist-authors__card__details__top {
+  text-align: center;
+  border-bottom: 1px solid #eff1f6;
+  margin: 5px 0 15px;
 }
 .directorist-content-active .directorist-authors__card h2 {
   font-size: 20px;
