--- a/assets/src/scss/component/_all-authors.scss
+++ b/assets/src/scss/component/_all-authors.scss
@@ -5,6 +5,13 @@
 }
 .directorist-content-active{
     .directorist-authors{
+        @include e(cards){
+            margin-top: -30px;
+            .directorist-row > *{
+                margin-top: 30px;
+            }
+        }
+
         @include e(nav){
             margin-bottom: 30px;
             ul{
@@ -24,7 +31,7 @@
                         border-bottom: 2px solid transparent;
                         font-size: 15px;
                         font-weight: 500;
-                        text-transform: uppercase;
+                        text-transform: capitalize;
                         box-shadow: none;
                         text-decoration: none;
                         transition: 0.3s ease;
@@ -48,9 +55,20 @@
             background: #fff;
             @include e(img){
                 margin-bottom: 15px;
+                text-align: center;
                 img{
-                    border-radius: 10px;
-                    width: 100%;
+                    border-radius: 50%;
+                    width: 150px;
+                    height: 150px;
+                    display: inline-block;
+                    object-fit: cover;
+                }
+            }
+            @include e(details){
+                @include e(top){
+                    text-align: center;
+                    border-bottom: 1px solid $border-color;
+                    margin: 5px 0 15px;
                 }
             }
             h2{
